Fix padding and sizing in Weather App component to prevent content overflow

--- a/src/components/WeatherWidget.css
+++ b/src/components/WeatherWidget.css
@@ -6,7 +6,8 @@
 
 #weather-app-div
 {
-    padding: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     width: 90%;
     height: 100%;
     display: flex;
@@ -33,7 +34,7 @@
     font-weight: 600;
     letter-spacing: 1px;
     color: rgb(211, 211, 211);
-    padding: 5px;
+    padding: 0px;
 }
 
 #description
@@ -48,7 +49,7 @@
 #weather-icon
 {
     width: 100%;
-    height: 150px;    
+    height: 140px;    
     object-fit: cover;
 }
 
